<resources>
    <string name="app_name">短信转发助手</string>
    <string name="permission_needed">请授予短信读取权限以使用此应用</string>
    <string name="input_phone">106*</string>
    <string name="input_url">https://your-server.com/api/sms</string>
    <string name="label_advanced">高级设置</string>
    <string name="label_routing_params">转发配置</string>
    <string name="btn_add">添加</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_close">关闭</string>
    <string name="btn_clear">清空</string>
    <string name="btn_test">测试</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_delete">删除</string>
    <string name="btn_on">开启</string>
    <string name="btn_off">关闭</string>
    <string name="delete_record">删除配置</string>
    <string name="key_phones_preference">phones</string>
    <string name="label_add_sender">发送者（号码或关键词）</string>
    <string name="label_content_filter">内容关键词过滤</string>
    <string name="hint_content_filter">例如：拼多多（留空表示不过滤）</string>
    <string name="content_filter_recommendation">提示：只有短信内容包含此关键词时才会转发</string>
    <string name="label_receive_phone">本机手机号</string>
    <string name="hint_receive_phone">请输入此手机接收短信的号码</string>
    <string name="receive_phone_recommendation">必填：用于标识验证码属于哪个手机号，支持并发登录验证码匹配</string>
    <string name="error_empty_receive_phone">请输入本机手机号</string>
    <string name="label_number_retries">重试次数</string>
    <string name="label_sender">发送者</string>
    <string name="label_url">服务器地址</string>
    <string name="label_json_template">JSON 数据模板</string>
    <string name="label_json_headers">请求头</string>
    <string name="label_sim_slot">SIM 卡槽</string>
    <string name="label_ignore_ssl">忽略 SSL 证书错误</string>
    <string name="label_chunked_mode">分块传输模式</string>
    <string name="hint_sender">号码、关键词或 * 表示全部</string>
    <string name="sender_recommendation">提示：输入 * 接收所有短信，输入 106 只接收以106开头的验证码</string>
    <string name="json_template_recommendation">可用变量：%text%(内容) %from%(发送者) %sentStamp%(发送时间) %receivedStamp%(接收时间) %sim%(卡槽) %receivePhone%(本机手机号)</string>
    <string name="error_empty_sender">请输入发送者</string>
    <string name="error_empty_url">请输入服务器地址</string>
    <string name="error_wrong_url">服务器地址格式错误</string>
    <string name="error_wrong_json">JSON 格式错误</string>
    <string name="error_wrong_retries_number">重试次数必须大于 0</string>
    <string name="asterisk">*</string>
    <string name="any">全部</string>
    <string name="confirm_delete">确定要删除配置 \"%s\" 吗？</string>
    <string name="notification_channel">短信转发</string>
    <string name="menu_syslog">系统日志</string>
</resources>
