<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_config_edit_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="基本设置" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/input_phone"
            android:text="@string/label_add_sender" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_sender"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="-4dp"
            android:text="@string/sender_recommendation"
            android:textSize="10sp"
            android:textColor="#666" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/input_content_filter"
            android:text="@string/label_content_filter" />

        <EditText
            android:id="@+id/input_content_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_content_filter"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="-4dp"
            android:text="@string/content_filter_recommendation"
            android:textSize="10sp"
            android:textColor="#666" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/input_phone"
            android:text="@string/label_url" />

        <EditText
            android:id="@+id/input_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/input_url"
            android:inputType="textUri" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:textColor="#666"
            android:textSize="14sp"
            android:text="@string/label_advanced" />

        <TextView
            android:id="@+id/input_sim_slot_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:visibility="gone"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/input_sim_slot"
            android:text="@string/label_sim_slot" />

        <Spinner
            android:id="@+id/input_sim_slot"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:popupTheme="@style/AppTheme.Spinner"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:labelFor="@+id/input_json_template"
            android:text="@string/label_json_template"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_json_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:textSize="10sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="-4dp"
            android:text="@string/json_template_recommendation"
            android:textSize="9sp"
            android:textColor="#999" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:labelFor="@+id/input_json_headers"
            android:text="@string/label_json_headers"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_json_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:textSize="10sp"
            android:typeface="monospace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:labelFor="@+id/input_number_retries"
            android:text="@string/label_number_retries"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_number_retries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/input_ignore_ssl"
                android:text="@string/label_ignore_ssl"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/input_ignore_ssl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/input_chunked_mode"
                android:text="@string/label_chunked_mode" />

            <CheckBox
                android:id="@+id/input_chunked_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:checked="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
